style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  font-family: "Roboto", sans-serif;
  background-color: #333;
}

.dash-icon {
  width: 50px;
  height: 50px;
  fill: #ffffff;
}

header {
  background-color: #ffffff;
  padding: 10px 40px;
  grid-column: 2 /-1;
  display: grid;
  grid-template-columns: 2fr 1fr;
  grid-template-rows: 1fr 1fr;
  column-gap: 10px;
}

.header-menu,
.header-submenu {
  margin-bottom: 65px;
  padding-left: 13px;
}

nav {
  background-color: #0095d1;
  grid-row: 1/-1;
  padding: 14px;
}
main {
  background-color: #e1e8f0;
}

li {
  list-style: none;
  margin-bottom: 20px;
}

li a:link,
li a:visited {
  color: #ffffff;
  display: flex;
  align-items: center;
  font-size: 20px;
  font-weight: 440;
  gap: 15px;
}

li a:hover,
li a:active {
  color: #dddddd;
}

.heading a:link,
.heading a:visited {
  color: #ffffff;
}

a:link {
  text-decoration: none;
  cursor: pointer;
  transition: all 0.3s;
}

svg {
  height: 23px;
  width: 23px;
}
.nav-icon {
  fill: #ffffff;
}

.site-container {
  margin: 0 auto;
  width: 1300px;
  height: 100vh;
  display: grid;
  grid-template-columns: 1fr 4fr;
  grid-template-rows: 1fr 5fr;
}

.heading h1 {
  font-size: 28px;
  font-weight: 500;
}

.heading a {
  display: flex;
  justify-content: left;
  align-items: center;
  gap: 10px;
  margin-bottom: 55px;
}

.search-container {
  display: flex;
  align-items: center;
  gap: 8px;
}

#search-box {
  width: 100%;
  height: 30px;
  border-radius: 40px;
  border-style: none;
  padding: 8px;
  background-color: #e1e8f0;
}

.login-info-container {
  display: flex;
  align-items: center;
  justify-content: right;
  gap: 20px;
  padding-right: 15px;
}

.login-info-container span {
  font-size: 18px;
  font-weight: 700;
}

.display-name-container {
  display: flex;
  gap: 16px;
  align-items: center;
}

.button-container {
  display: flex;
}

.login-photo {
  max-width: 40px;
  max-height: 40px;
  border-radius: 50%;
}

.main-photo {
  max-width: 58px;
  max-height: 58px;
  border-radius: 50%;
}

.person-container p {
  font-size: 14px;
  font-weight: 500;
  margin-bottom: 6px;
}

.person-container h3 {
  font-size: 24px;
  font-weight: 650;
}

